Correct <div> and table's location in news section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container1">
         <h2>Новинки</h2>
         <div class="clearfix">
-          <div class="new-good bottle-left clearfix">
+          <div class="new-good bottle-left">
             <h3>Вахтёр</h3>
             <div class="info">
               <table>
@@ -44,18 +44,16 @@
               </table>
               <p>Ржаной хлеб, Вода, Солод, Соль</p>
             </div>
-            <div class="beer1"><img src="img/bottle-left.jpg" alt="Вахтёр" ></div>
+            <img src="img/bottle-left.jpg" alt="Вахтёр"><br>
             <div class="description">
               <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
-            </div>
-            <p>
               <a class="btn btn-details" href="#">Подробнее</a>
               <a class="btn btn-buy" href="#">Купить</a>
               <b class="price">150 Р.</b>
-            </p>
+            </div>
           </div>
 
-          <div class="new-good bottle-right clearfix">
+          <div class="new-good bottle-right">
             <h3>Романтик</h3>
             <div class="info">
               <table>
@@ -70,15 +68,13 @@
               </table>
               <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
             </div>
-            <div class="beer2"><img src="img/bottle-right.jpg" alt="Романтик"></div>
+            <img src="img/bottle-right.jpg" alt="Романтик"><br>
             <div class="description">
               <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-            </div>
-            <p>
               <a class="btn btn-details" href="#">Подробнее</a>
               <a class="btn btn-buy" href="#">Купить</a>
               <b class="price">90 Р.</b>
-            </p>
+            </div>
           </div>
         </div>
       </div>
